--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,4 +1,8 @@
+
 <div class="container">
+   <div class="row">
+    <app-headers class="justify-content-center"></app-headers>
+   </div>
     <div class="form" [formGroup]="todo">
         <div class="form-body">
             <div class="row mt-3">
